Updated to dockerfiles to latest openJDK. Updated service tests.